--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: ruby
 script:
-  - "bundle exec rake jasmine:ci"
+  - "bundle exec rake jasmine:ci JASMINE_CONFIG_PATH=rspec/javascripts/support/jasmine.yml"
